--- a/statistiky.html
+++ b/statistiky.html
@@ -2,18 +2,103 @@
 <html lang="cs">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Statistiky zápasu</title>
 
 <style>
-body{font-family:Arial;background:#f2f2f2;margin:0}
-.wrapper{max-width:1100px;margin:40px auto;background:white;padding:30px}
-.controls{display:flex;gap:10px;flex-wrap:wrap;margin-bottom:20px}
-table{border-collapse:collapse;width:100%;margin-top:20px}
-th,td{border:1px solid #999;padding:8px;text-align:center}
-th{background:#cfe8f7}
-button{padding:6px 10px;cursor:pointer}
-.deleteBtn{background:#d9534f;color:white;border:none}
-h2{margin-top:40px}
+
+*{box-sizing:border-box}
+
+body{
+    font-family:Arial;
+    background:#f2f2f2;
+    margin:0;
+}
+
+.wrapper{
+    max-width:1200px;
+    margin:auto;
+    padding:20px;
+    background:white;
+}
+
+h1,h2{
+    margin-top:20px;
+}
+
+/* ===== OVLÁDACÍ PANEL ===== */
+
+.controls{
+    display:flex;
+    flex-wrap:wrap;
+    gap:10px;
+    margin-bottom:20px;
+}
+
+.controls select,
+.controls input,
+.controls button{
+    padding:8px;
+    font-size:14px;
+    min-height:38px;
+}
+
+/* desktop */
+.controls > *{
+    flex:1;
+    min-width:160px;
+}
+
+/* ===== TABULKY ===== */
+
+.tableWrap{
+    overflow-x:auto;
+}
+
+table{
+    border-collapse:collapse;
+    width:100%;
+    min-width:650px;
+}
+
+th,td{
+    border:1px solid #999;
+    padding:8px;
+    text-align:center;
+}
+
+th{
+    background:#cfe8f7;
+    position:sticky;
+    top:0;
+}
+
+.deleteBtn{
+    background:#d9534f;
+    color:white;
+    border:none;
+    padding:6px 10px;
+    cursor:pointer;
+}
+
+/* ===== MOBIL ===== */
+
+@media (max-width:700px){
+
+    .wrapper{
+        padding:15px;
+    }
+
+    th,td{
+        padding:6px;
+        font-size:13px;
+    }
+
+    .controls > *{
+        flex:100%;
+    }
+}
+
 </style>
 </head>
 
@@ -66,6 +151,7 @@ h2{margin-top:40px}
 
 <h2>Historie zápasů</h2>
 
+<div class="tableWrap">
 <table id="history">
 <thead>
 <tr>
@@ -80,9 +166,11 @@ h2{margin-top:40px}
 </thead>
 <tbody></tbody>
 </table>
+</div>
 
 <h2>Detail zápasu</h2>
 
+<div class="tableWrap">
 <table id="detailTable" style="display:none">
 <tr><th>Statistika</th><th>Hosté</th><th>Domácí</th></tr>
 <tr><td>Střely</td><td id="ds0"></td><td id="ds10"></td></tr>
@@ -96,6 +184,7 @@ h2{margin-top:40px}
 <tr><td>Góly 3. tř.</td><td id="ds8"></td><td id="ds18"></td></tr>
 <tr><td>Prodloužení</td><td id="ds9"></td><td id="ds19"></td></tr>
 </table>
+</div>
 
 </div>
 
@@ -133,71 +222,64 @@ window.addEventListener("load", loadMatches);
 
 <script>
 
-let loadedLines = [];
+let loadedLines=[];
 
-document.getElementById("fileInput").addEventListener("change", e => {
-    const reader = new FileReader();
-    reader.onload = ev => {
-        loadedLines = ev.target.result
-            .split(/\r?\n/)
-            .map(l=>l.trim())
-            .filter(l=>l!=="");
+document.getElementById("fileInput").addEventListener("change", e=>{
+    const reader=new FileReader();
+    reader.onload=ev=>{
+        loadedLines=ev.target.result.split(/\r?\n/).map(l=>l.trim()).filter(l=>l!=="");
     };
     reader.readAsText(e.target.files[0]);
 });
 
 async function saveMatch(){
 
-    if(loadedLines.length < 20){
+    if(loadedLines.length<20){
         alert("Nejprve nahraj zapas.txt");
         return;
     }
 
     await addDoc(collection(db,"zapasy"),{
-        category: category.value,
-        player: player.value,
-        homeTeam: homeTeam.value,
-        awayTeam: awayTeam.value,
-        stats: loadedLines,
-        created: Date.now()
+        category:category.value,
+        player:player.value,
+        homeTeam:homeTeam.value,
+        awayTeam:awayTeam.value,
+        stats:loadedLines,
+        created:Date.now()
     });
 
-    alert("Zápas uložen!");
     loadMatches();
 }
 
 async function deleteMatch(id){
-
-    if(!confirm("Opravdu chceš smazat tento zápas?")) return;
-
+    if(!confirm("Opravdu smazat zápas?")) return;
     await deleteDoc(doc(db,"zapasy",id));
     loadMatches();
 }
 
 async function loadMatches(){
 
-    const tbody = document.querySelector("#history tbody");
+    const tbody=document.querySelector("#history tbody");
     tbody.innerHTML="";
 
-    const q = query(collection(db,"zapasy"), orderBy("created","desc"));
-    const snapshot = await getDocs(q);
+    const q=query(collection(db,"zapasy"),orderBy("created","desc"));
+    const snapshot=await getDocs(q);
 
     snapshot.forEach(docSnap=>{
 
-        const d = docSnap.data();
+        const d=docSnap.data();
 
-        const awayGoals =
-            Number(d.stats[6]) +
-            Number(d.stats[7]) +
+        const awayGoals=
+            Number(d.stats[6])+
+            Number(d.stats[7])+
             Number(d.stats[8]);
 
-        const homeGoals =
-            Number(d.stats[16]) +
-            Number(d.stats[17]) +
+        const homeGoals=
+            Number(d.stats[16])+
+            Number(d.stats[17])+
             Number(d.stats[18]);
 
         const tr=document.createElement("tr");
-        tr.style.cursor="pointer";
 
         tr.innerHTML=`
         <td>${new Date(d.created).toLocaleDateString()}</td>
@@ -209,9 +291,9 @@ async function loadMatches(){
         <td><button class="deleteBtn">Smazat</button></td>
         `;
 
-        tr.onclick = () => showDetail(d.stats);
+        tr.onclick=()=>showDetail(d.stats);
 
-        tr.querySelector(".deleteBtn").onclick = (e)=>{
+        tr.querySelector(".deleteBtn").onclick=(e)=>{
             e.stopPropagation();
             deleteMatch(docSnap.id);
         };
@@ -222,7 +304,7 @@ async function loadMatches(){
 
 function showDetail(stats){
     for(let i=0;i<20;i++){
-        document.getElementById("ds"+i).innerText = stats[i];
+        document.getElementById("ds"+i).innerText=stats[i];
     }
     document.getElementById("detailTable").style.display="table";
 }
