--- a/statistiky.html
+++ b/statistiky.html
@@ -22,12 +22,6 @@ body{
     background:white;
 }
 
-h1,h2{
-    margin-top:20px;
-}
-
-/* ===== OVLÁDACÍ PANEL ===== */
-
 .controls{
     display:flex;
     flex-wrap:wrap;
@@ -35,21 +29,11 @@ h1,h2{
     margin-bottom:20px;
 }
 
-.controls select,
-.controls input,
-.controls button{
-    padding:8px;
-    font-size:14px;
-    min-height:38px;
-}
-
-/* desktop */
 .controls > *{
     flex:1;
     min-width:160px;
+    padding:8px;
 }
-
-/* ===== TABULKY ===== */
 
 .tableWrap{
     overflow-x:auto;
@@ -69,8 +53,6 @@ th,td{
 
 th{
     background:#cfe8f7;
-    position:sticky;
-    top:0;
 }
 
 .deleteBtn{
@@ -81,22 +63,13 @@ th{
     cursor:pointer;
 }
 
-/* ===== MOBIL ===== */
+/* OZNAČENÍ AKTIVNÍHO ZÁPASU */
+.activeMatch{
+    background:#fff3cd !important;
+}
 
 @media (max-width:700px){
-
-    .wrapper{
-        padding:15px;
-    }
-
-    th,td{
-        padding:6px;
-        font-size:13px;
-    }
-
-    .controls > *{
-        flex:100%;
-    }
+    .controls > *{flex:100%;}
 }
 
 </style>
@@ -188,7 +161,6 @@ th{
 
 </div>
 
-<!-- FIREBASE -->
 <script type="module">
 
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -207,14 +179,14 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 
-window.db = db;
-window.addDoc = addDoc;
-window.collection = collection;
-window.getDocs = getDocs;
-window.deleteDoc = deleteDoc;
-window.doc = doc;
-window.query = query;
-window.orderBy = orderBy;
+window.db=db;
+window.addDoc=addDoc;
+window.collection=collection;
+window.getDocs=getDocs;
+window.deleteDoc=deleteDoc;
+window.doc=doc;
+window.query=query;
+window.orderBy=orderBy;
 
 window.addEventListener("load", loadMatches);
 
@@ -223,11 +195,13 @@ window.addEventListener("load", loadMatches);
 <script>
 
 let loadedLines=[];
+let activeRow=null;
 
 document.getElementById("fileInput").addEventListener("change", e=>{
     const reader=new FileReader();
     reader.onload=ev=>{
-        loadedLines=ev.target.result.split(/\r?\n/).map(l=>l.trim()).filter(l=>l!=="");
+        loadedLines=ev.target.result.split(/\r?\n/)
+        .map(l=>l.trim()).filter(l=>l!=="");
     };
     reader.readAsText(e.target.files[0]);
 });
@@ -265,19 +239,17 @@ async function loadMatches(){
     const q=query(collection(db,"zapasy"),orderBy("created","desc"));
     const snapshot=await getDocs(q);
 
+    let first=true;
+
     snapshot.forEach(docSnap=>{
 
         const d=docSnap.data();
 
         const awayGoals=
-            Number(d.stats[6])+
-            Number(d.stats[7])+
-            Number(d.stats[8]);
+            Number(d.stats[6])+Number(d.stats[7])+Number(d.stats[8]);
 
         const homeGoals=
-            Number(d.stats[16])+
-            Number(d.stats[17])+
-            Number(d.stats[18]);
+            Number(d.stats[16])+Number(d.stats[17])+Number(d.stats[18]);
 
         const tr=document.createElement("tr");
 
@@ -291,7 +263,10 @@ async function loadMatches(){
         <td><button class="deleteBtn">Smazat</button></td>
         `;
 
-        tr.onclick=()=>showDetail(d.stats);
+        tr.onclick=()=>{
+            setActiveRow(tr);
+            showDetail(d.stats);
+        };
 
         tr.querySelector(".deleteBtn").onclick=(e)=>{
             e.stopPropagation();
@@ -299,7 +274,21 @@ async function loadMatches(){
         };
 
         tbody.appendChild(tr);
+
+        /* AUTOMATICKY VYBRAT POSLEDNÍ ZÁPAS */
+        if(first){
+            setActiveRow(tr);
+            showDetail(d.stats);
+            first=false;
+        }
+
     });
+}
+
+function setActiveRow(row){
+    if(activeRow) activeRow.classList.remove("activeMatch");
+    activeRow=row;
+    activeRow.classList.add("activeMatch");
 }
 
 function showDetail(stats){
