--- a/statistiky.html
+++ b/statistiky.html
@@ -51,7 +51,7 @@ th,td{
     text-align:center;
 }
 
-/* ČERNÁ HLAVIČKA + ZLATÝ TEXT */
+/* HLAVIČKY TABULEK */
 th{
     background:black;
     color:#d4af37;
@@ -65,8 +65,10 @@ th{
     cursor:pointer;
 }
 
+/* AKTIVNÍ ZÁPAS */
 .activeMatch{
-    background:#fff3cd !important;
+    background:#ffff00 !important;
+    color:black;
 }
 
 @media (max-width:700px){
