--- a/statistiky.html
+++ b/statistiky.html
@@ -51,10 +51,11 @@ th,td{
     text-align:center;
 }
 
-/* HLAVIČKY TABULEK */
+/* HLAVIČKY TABULEK - ŽLUTÁ */
 th{
-    background:black;
-    color:#d4af37;
+    background:#ffff00;
+    color:black;
+    font-weight:bold;
 }
 
 .deleteBtn{
