--- a/statistiky.html
+++ b/statistiky.html
@@ -51,10 +51,10 @@ th,td{
     text-align:center;
 }
 
-/* HLAVIČKY TABULEK - ŽLUTÁ */
+/* HLAVIČKY TABULEK */
 th{
-    background:#ffff00;
-    color:black;
+    background:black;
+    color:#ffff00;
     font-weight:bold;
 }
 
