--- a/statistiky.html
+++ b/statistiky.html
@@ -6,6 +6,7 @@
 <title>Statistiky zápasu</title>
 
 <style>
+
 *{box-sizing:border-box}
 
 body{
@@ -21,22 +22,27 @@ body{
     background:white;
 }
 
-.controls,.filterBar{
+.controls{
     display:flex;
     flex-wrap:wrap;
     gap:10px;
-    margin-bottom:15px;
+    margin-bottom:20px;
 }
 
-.controls > *, .filterBar > *{
+.controls > *{
     flex:1;
     min-width:160px;
     padding:8px;
 }
 
+.tableWrap{
+    overflow-x:auto;
+}
+
 table{
     border-collapse:collapse;
     width:100%;
+    min-width:650px;
 }
 
 th,td{
@@ -45,13 +51,11 @@ th,td{
     text-align:center;
 }
 
+/* HLAVIČKY TABULEK */
 th{
     background:black;
     color:#ffff00;
-}
-
-.activeMatch{
-    background:#d3d3d3 !important;
+    font-weight:bold;
 }
 
 .deleteBtn{
@@ -61,6 +65,24 @@ th{
     padding:6px 10px;
     cursor:pointer;
 }
+
+.activeMatch{
+    background:#ffff00 !important;
+    color:black;
+}
+
+.filterBar{
+    display:flex;
+    gap:10px;
+    flex-wrap:wrap;
+    margin-bottom:10px;
+}
+
+@media (max-width:700px){
+    .controls > *,
+    .filterBar > *{flex:100%;}
+}
+
 </style>
 </head>
 
@@ -71,6 +93,7 @@ th{
 <h1>Statistiky zápasu</h1>
 
 <div class="controls">
+
 <input type="file" id="fileInput" accept=".txt">
 
 <select id="category">
@@ -111,11 +134,13 @@ th{
 </select>
 
 <button onclick="saveMatch()">Uložit zápas</button>
+
 </div>
 
 <h2>Historie zápasů</h2>
 
 <div class="filterBar">
+
 <select id="filterCategory">
 <option value="">Všechny kategorie</option>
 <option>Extraliga - základní část</option>
@@ -131,8 +156,10 @@ th{
 
 <button onclick="applyFilter()">Filtrovat</button>
 <button onclick="resetFilter()">Zobrazit vše</button>
+
 </div>
 
+<div class="tableWrap">
 <table id="history">
 <thead>
 <tr>
@@ -147,9 +174,11 @@ th{
 </thead>
 <tbody></tbody>
 </table>
+</div>
 
 <h2>Detail zápasu</h2>
 
+<div class="tableWrap">
 <table id="detailTable" style="display:none">
 <tr><th>Statistika</th><th>Hosté</th><th>Domácí</th></tr>
 <tr><td>Střely</td><td id="ds0"></td><td id="ds10"></td></tr>
@@ -163,14 +192,188 @@ th{
 <tr><td>Góly 3. tř.</td><td id="ds8"></td><td id="ds18"></td></tr>
 <tr><td>Prodloužení</td><td id="ds9"></td><td id="ds19"></td></tr>
 </table>
+</div>
 
 </div>
 
+<script type="module">
+
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, query, orderBy } 
+from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyD0jDnVNHZAs83g6FGwQT_nOpOCyT4NTNU",
+  authDomain: "statistiky-6310a.firebaseapp.com",
+  projectId: "statistiky-6310a",
+  storageBucket: "statistiky-6310a.appspot.com",
+  messagingSenderId: "1023222901562",
+  appId: "1:1023222901562:web:522ee763e27aa08a8b7e03"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+window.db=db;
+window.addDoc=addDoc;
+window.collection=collection;
+window.getDocs=getDocs;
+window.deleteDoc=deleteDoc;
+window.doc=doc;
+window.query=query;
+window.orderBy=orderBy;
+
+window.addEventListener("load", loadMatches);
+
+</script>
+
 <script>
-/* ===== ZÁLOHA ===== */
-function backup(matches){
-    localStorage.setItem("backup_zapasy", JSON.stringify(matches));
+
+let loadedLines=[];
+let activeRow=null;
+let allMatches=[];
+
+/* ===== FILTR ===== */
+
+function applyFilter(){
+    const cat=document.getElementById("filterCategory").value;
+    const player=document.getElementById("filterPlayer").value;
+    renderMatches(cat,player);
 }
+
+function resetFilter(){
+    filterCategory.value="";
+    filterPlayer.value="";
+    renderMatches();
+}
+
+/* ===== NAČTENÍ TXT ===== */
+
+document.getElementById("fileInput").addEventListener("change", e=>{
+    const reader=new FileReader();
+    reader.onload=ev=>{
+        loadedLines=ev.target.result.split(/\r?\n/)
+        .map(l=>l.trim()).filter(l=>l!=="");
+    };
+    reader.readAsText(e.target.files[0]);
+});
+
+/* ===== ULOŽENÍ ===== */
+
+async function saveMatch(){
+
+    if(!category.value || !player.value || !homeTeam.value || !awayTeam.value){
+        alert("Vyber kategorii, hráče a oba týmy.");
+        return;
+    }
+
+    if(loadedLines.length<20){
+        alert("Nejprve nahraj zapas.txt");
+        return;
+    }
+
+    await addDoc(collection(db,"zapasy"),{
+        category:category.value,
+        player:player.value,
+        homeTeam:homeTeam.value,
+        awayTeam:awayTeam.value,
+        stats:loadedLines,
+        created:Date.now()
+    });
+
+    loadMatches();
+}
+
+/* ===== MAZÁNÍ ===== */
+
+async function deleteMatch(id){
+    if(!confirm("Opravdu smazat zápas?")) return;
+    await deleteDoc(doc(db,"zapasy",id));
+    loadMatches();
+}
+
+/* ===== NAČTENÍ ===== */
+
+async function loadMatches(){
+
+    allMatches=[];
+    const q=query(collection(db,"zapasy"),orderBy("created","desc"));
+    const snapshot=await getDocs(q);
+
+    snapshot.forEach(docSnap=>{
+        allMatches.push({id:docSnap.id,...docSnap.data()});
+    });
+
+    renderMatches();
+}
+
+/* ===== RENDER ===== */
+
+function renderMatches(filterCategory="",filterPlayer=""){
+
+    const tbody=document.querySelector("#history tbody");
+    tbody.innerHTML="";
+
+    let first=true;
+
+    allMatches.forEach(m=>{
+
+        if(filterCategory && m.category!==filterCategory) return;
+        if(filterPlayer && m.player!==filterPlayer) return;
+
+        const awayGoals=
+            Number(m.stats[6])+Number(m.stats[7])+Number(m.stats[8]);
+
+        const homeGoals=
+            Number(m.stats[16])+Number(m.stats[17])+Number(m.stats[18]);
+
+        const tr=document.createElement("tr");
+
+        tr.innerHTML=`
+        <td>${new Date(m.created).toLocaleDateString()}</td>
+        <td>${m.category}</td>
+        <td>${m.player}</td>
+        <td>${m.awayTeam}</td>
+        <td>${m.homeTeam}</td>
+        <td>${awayGoals} : ${homeGoals}</td>
+        <td><button class="deleteBtn">Smazat</button></td>
+        `;
+
+        tr.onclick=()=>{
+            setActiveRow(tr);
+            showDetail(m.stats);
+        };
+
+        tr.querySelector(".deleteBtn").onclick=(e)=>{
+            e.stopPropagation();
+            deleteMatch(m.id);
+        };
+
+        tbody.appendChild(tr);
+
+        if(first){
+            setActiveRow(tr);
+            showDetail(m.stats);
+            first=false;
+        }
+    });
+}
+
+/* ===== DETAIL ===== */
+
+function setActiveRow(row){
+    if(activeRow) activeRow.classList.remove("activeMatch");
+    activeRow=row;
+    activeRow.classList.add("activeMatch");
+}
+
+function showDetail(stats){
+    for(let i=0;i<20;i++){
+        document.getElementById("ds"+i).innerText=stats[i];
+    }
+    document.getElementById("detailTable").style.display="table";
+}
+
 </script>
 
 </body>
