--- a/statistiky.html
+++ b/statistiky.html
@@ -66,7 +66,7 @@ th{
     cursor:pointer;
 }
 
-/* ✅ AKTIVNÍ ZÁPAS — ZMĚNĚNO NA ŠEDOU */
+/* ✅ JEDINÁ ZMĚNA — ŠEDÝ AKTIVNÍ ŘÁDEK */
 .activeMatch{
     background:#d3d3d3 !important;
     color:black;
@@ -197,6 +197,7 @@ th{
 
 </div>
 
-<!-- ZBYTEK JS ZŮSTÁVÁ BEZE ZMĚNY -->
+<!-- TVŮJ PŮVODNÍ FIREBASE + JS ZŮSTÁVÁ BEZE ZMĚNY -->
+
 </body>
 </html>
