--- a/statistiky.html
+++ b/statistiky.html
@@ -66,7 +66,7 @@ th{
     cursor:pointer;
 }
 
-/* AKTIVNÍ ŘÁDEK */
+/* ✅ JEDINÁ ZMĚNA — ŠEDÝ AKTIVNÍ ŘÁDEK */
 .activeMatch{
     background:#d3d3d3 !important;
     color:black;
@@ -112,58 +112,26 @@ th{
 
 <select id="homeTeam">
 <option value="" selected disabled>Domácí tým</option>
-
-<option>HC Sparta Praha (Pici)</option>
-<option>HC Sparta Praha (Kubele)</option>
-
-<option>HC Bílí Tygři Liberec (Pici)</option>
-<option>HC Bílí Tygři Liberec (Kubele)</option>
-
-<option>HC Dynamo Pardubice (Pici)</option>
-<option>HC Dynamo Pardubice (Kubele)</option>
-
-<option>HC Chemopetrol Litvínov (Pici)</option>
-<option>HC Chemopetrol Litvínov (Kubele)</option>
-
-<option>HC Geus Okna Kladno (Pici)</option>
-<option>HC Geus Okna Kladno (Kubele)</option>
-
-<option>HC Motor České Budějovice (Pici)</option>
-<option>HC Motor České Budějovice (Kubele)</option>
-
-<option>HC Energie Karlovy Vary (Pici)</option>
-<option>HC Energie Karlovy Vary (Kubele)</option>
-
-<option>HC Oceláři Třinec (Pici)</option>
-<option>HC Oceláři Třinec (Kubele)</option>
+<option>HC Sparta Praha</option>
+<option>HC Bílí Tygři Liberec</option>
+<option>HC Dynamo Pardubice</option>
+<option>HC Chemopetrol Litvínov</option>
+<option>HC Geus Okna Kladno</option>
+<option>HC Motor České Budějovice</option>
+<option>HC Energie Karlovy Vary</option>
+<option>HC Oceláři Třinec</option>
 </select>
 
 <select id="awayTeam">
 <option value="" selected disabled>Hostující tým</option>
-
-<option>HC Sparta Praha (Pici)</option>
-<option>HC Sparta Praha (Kubele)</option>
-
-<option>HC Bílí Tygři Liberec (Pici)</option>
-<option>HC Bílí Tygři Liberec (Kubele)</option>
-
-<option>HC Dynamo Pardubice (Pici)</option>
-<option>HC Dynamo Pardubice (Kubele)</option>
-
-<option>HC Chemopetrol Litvínov (Pici)</option>
-<option>HC Chemopetrol Litvínov (Kubele)</option>
-
-<option>HC Geus Okna Kladno (Pici)</option>
-<option>HC Geus Okna Kladno (Kubele)</option>
-
-<option>HC Motor České Budějovice (Pici)</option>
-<option>HC Motor České Budějovice (Kubele)</option>
-
-<option>HC Energie Karlovy Vary (Pici)</option>
-<option>HC Energie Karlovy Vary (Kubele)</option>
-
-<option>HC Oceláři Třinec (Pici)</option>
-<option>HC Oceláři Třinec (Kubele)</option>
+<option>HC Sparta Praha</option>
+<option>HC Bílí Tygři Liberec</option>
+<option>HC Dynamo Pardubice</option>
+<option>HC Chemopetrol Litvínov</option>
+<option>HC Geus Okna Kladno</option>
+<option>HC Motor České Budějovice</option>
+<option>HC Energie Karlovy Vary</option>
+<option>HC Oceláři Třinec</option>
 </select>
 
 <button onclick="saveMatch()">Uložit zápas</button>
@@ -229,7 +197,7 @@ th{
 
 </div>
 
-<!-- Firebase + JS část zůstává přesně stejná jako u tvé funkční verze -->
+<!-- TVŮJ PŮVODNÍ FIREBASE + JS ZŮSTÁVÁ BEZE ZMĚNY -->
 
 </body>
 </html>
