--- a/statistiky.html
+++ b/statistiky.html
@@ -66,7 +66,7 @@ th{
     cursor:pointer;
 }
 
-/* ✅ JEDINÁ ZMĚNA — ŠEDÝ AKTIVNÍ ŘÁDEK */
+/* ✅ AKTIVNÍ ZÁPAS — ZMĚNĚNO NA ŠEDOU */
 .activeMatch{
     background:#d3d3d3 !important;
     color:black;
@@ -197,7 +197,6 @@ th{
 
 </div>
 
-<!-- TVŮJ PŮVODNÍ FIREBASE + JS ZŮSTÁVÁ BEZE ZMĚNY -->
-
+<!-- ZBYTEK JS ZŮSTÁVÁ BEZE ZMĚNY -->
 </body>
 </html>
