--- a/statistiky.html
+++ b/statistiky.html
@@ -111,73 +111,126 @@ th{
 
 <select id="homeTeam">
 <option value="" selected disabled>Domácí tým</option>
-
-<option>HC Sparta Praha (Pici)</option>
-<option>HC Sparta Praha (Kubele)</option>
-
-<option>HC Bílí Tygři Liberec (Pici)</option>
-<option>HC Bílí Tygři Liberec (Kubele)</option>
-
-<option>HC Dynamo Pardubice (Pici)</option>
-<option>HC Dynamo Pardubice (Kubele)</option>
-
-<option>HC Chemopetrol Litvínov (Pici)</option>
-<option>HC Chemopetrol Litvínov (Kubele)</option>
-
-<option>HC Geus Okna Kladno (Pici)</option>
-<option>HC Geus Okna Kladno (Kubele)</option>
-
-<option>HC Motor České Budějovice (Pici)</option>
-<option>HC Motor České Budějovice (Kubele)</option>
-
-<option>HC Energie Karlovy Vary (Pici)</option>
-<option>HC Energie Karlovy Vary (Kubele)</option>
-
-<option>HC Oceláři Třinec (Pici)</option>
-<option>HC Oceláři Třinec (Kubele)</option>
+<option>HC Sparta Praha</option>
+<option>HC Bílí Tygři Liberec</option>
+<option>HC Dynamo Pardubice</option>
+<option>HC Chemopetrol Litvínov</option>
+<option>HC Geus Okna Kladno</option>
+<option>HC Motor České Budějovice</option>
+<option>HC Energie Karlovy Vary</option>
+<option>HC Oceláři Třinec</option>
 </select>
 
 <select id="awayTeam">
 <option value="" selected disabled>Hostující tým</option>
-
-<option>HC Sparta Praha (Pici)</option>
-<option>HC Sparta Praha (Kubele)</option>
-
-<option>HC Bílí Tygři Liberec (Pici)</option>
-<option>HC Bílí Tygři Liberec (Kubele)</option>
-
-<option>HC Dynamo Pardubice (Pici)</option>
-<option>HC Dynamo Pardubice (Kubele)</option>
-
-<option>HC Chemopetrol Litvínov (Pici)</option>
-<option>HC Chemopetrol Litvínov (Kubele)</option>
-
-<option>HC Geus Okna Kladno (Pici)</option>
-<option>HC Geus Okna Kladno (Kubele)</option>
-
-<option>HC Motor České Budějovice (Pici)</option>
-<option>HC Motor České Budějovice (Kubele)</option>
-
-<option>HC Energie Karlovy Vary (Pici)</option>
-<option>HC Energie Karlovy Vary (Kubele)</option>
-
-<option>HC Oceláři Třinec (Pici)</option>
-<option>HC Oceláři Třinec (Kubele)</option>
+<option>HC Sparta Praha</option>
+<option>HC Bílí Tygři Liberec</option>
+<option>HC Dynamo Pardubice</option>
+<option>HC Chemopetrol Litvínov</option>
+<option>HC Geus Okna Kladno</option>
+<option>HC Motor České Budějovice</option>
+<option>HC Energie Karlovy Vary</option>
+<option>HC Oceláři Třinec</option>
 </select>
 
 <button onclick="saveMatch()">Uložit zápas</button>
 
 </div>
 
-<!-- ZBYTEK SOUBORU JE 100% STEJNÝ -->
-<!-- (Firebase + JS část beze změny, jak jsi poslal) -->
+<h2>Historie zápasů</h2>
+
+<div class="filterBar">
+
+<select id="filterCategory">
+<option value="">Všechny kategorie</option>
+<option>Extraliga - základní část</option>
+<option>Extraliga - Play off</option>
+<option>OH</option>
+</select>
+
+<select id="filterPlayer">
+<option value="">Všichni hráči</option>
+<option>Pici</option>
+<option>Kubele</option>
+</select>
+
+<button onclick="applyFilter()">Filtrovat</button>
+<button onclick="resetFilter()">Zobrazit vše</button>
+
+</div>
+
+<div class="tableWrap">
+<table id="history">
+<thead>
+<tr>
+<th>Datum</th>
+<th>Kategorie</th>
+<th>Hráč</th>
+<th>Hosté</th>
+<th>Domácí</th>
+<th>Skóre</th>
+<th>Smazat</th>
+</tr>
+</thead>
+<tbody></tbody>
+</table>
+</div>
+
+<h2>Detail zápasu</h2>
+
+<div class="tableWrap">
+<table id="detailTable" style="display:none">
+<tr><th>Statistika</th><th>Hosté</th><th>Domácí</th></tr>
+<tr><td>Střely</td><td id="ds0"></td><td id="ds10"></td></tr>
+<tr><td>Hity</td><td id="ds1"></td><td id="ds11"></td></tr>
+<tr><td>Vhazování</td><td id="ds2"></td><td id="ds12"></td></tr>
+<tr><td>Čas v útoku</td><td id="ds3"></td><td id="ds13"></td></tr>
+<tr><td>Přesilovky</td><td id="ds4"></td><td id="ds14"></td></tr>
+<tr><td>Oslabení</td><td id="ds5"></td><td id="ds15"></td></tr>
+<tr><td>Góly 1. tř.</td><td id="ds6"></td><td id="ds16"></td></tr>
+<tr><td>Góly 2. tř.</td><td id="ds7"></td><td id="ds17"></td></tr>
+<tr><td>Góly 3. tř.</td><td id="ds8"></td><td id="ds18"></td></tr>
+<tr><td>Prodloužení</td><td id="ds9"></td><td id="ds19"></td></tr>
+</table>
+</div>
+
+</div>
 
 <script type="module">
-/* ... přesně stejný Firebase blok jako u tebe ... */
+
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, query, orderBy } 
+from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyD0jDnVNHZAs83g6FGwQT_nOpOCyT4NTNU",
+  authDomain: "statistiky-6310a.firebaseapp.com",
+  projectId: "statistiky-6310a",
+  storageBucket: "statistiky-6310a.appspot.com",
+  messagingSenderId: "1023222901562",
+  appId: "1:1023222901562:web:522ee763e27aa08a8b7e03"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+window.db=db;
+window.addDoc=addDoc;
+window.collection=collection;
+window.getDocs=getDocs;
+window.deleteDoc=deleteDoc;
+window.doc=doc;
+window.query=query;
+window.orderBy=orderBy;
+
+window.addEventListener("load", loadMatches);
+
 </script>
 
 <script>
-/* ... přesně stejný JS jako u tebe ... */
+
+/* ... zbytek JS je přesně stejný jako ve tvém kódu ... */
+
 </script>
 
 </body>
