--- a/statistiky.html
+++ b/statistiky.html
@@ -67,7 +67,7 @@ th{
 }
 
 .activeMatch{
-    background:#ffff00 !important;
+    background:#d3d3d3; !important;
     color:black;
 }
 
@@ -371,3 +371,4 @@ function showDetail(stats){
 
 </body>
 </html>
+
