--- a/statistiky.html
+++ b/statistiky.html
@@ -158,8 +158,227 @@ th{
 
 </div>
 
-<!-- ZBYTEK KÓDU JE 100% STEJNÝ JAKO TVŮJ POSLEDNÍ -->
-<!-- Firebase + JS část beze změny -->
+<h2>Historie zápasů</h2>
+
+<div class="filterBar">
+
+<select id="filterCategory">
+<option value="">Všechny kategorie</option>
+<option>Extraliga - základní část</option>
+<option>Extraliga - Play off</option>
+<option>OH</option>
+</select>
+
+<button onclick="applyFilter()">Filtrovat</button>
+<button onclick="resetFilter()">Zobrazit vše</button>
+
+</div>
+
+<div class="tableWrap">
+<table id="history">
+<thead>
+<tr>
+<th>Datum</th>
+<th>Kategorie</th>
+<th>Hosté</th>
+<th>Domácí</th>
+<th>Skóre</th>
+<th>Smazat</th>
+</tr>
+</thead>
+<tbody></tbody>
+</table>
+</div>
+
+<h2>Detail zápasu</h2>
+
+<div class="tableWrap">
+<table id="detailTable" style="display:none">
+<tr><th>Statistika</th><th>Hosté</th><th>Domácí</th></tr>
+<tr><td>Střely</td><td id="ds0"></td><td id="ds10"></td></tr>
+<tr><td>Hity</td><td id="ds1"></td><td id="ds11"></td></tr>
+<tr><td>Vhazování</td><td id="ds2"></td><td id="ds12"></td></tr>
+<tr><td>Čas v útoku</td><td id="ds3"></td><td id="ds13"></td></tr>
+<tr><td>Přesilovky</td><td id="ds4"></td><td id="ds14"></td></tr>
+<tr><td>Oslabení</td><td id="ds5"></td><td id="ds15"></td></tr>
+<tr><td>Góly 1. tř.</td><td id="ds6"></td><td id="ds16"></td></tr>
+<tr><td>Góly 2. tř.</td><td id="ds7"></td><td id="ds17"></td></tr>
+<tr><td>Góly 3. tř.</td><td id="ds8"></td><td id="ds18"></td></tr>
+<tr><td>Prodloužení</td><td id="ds9"></td><td id="ds19"></td></tr>
+</table>
+</div>
+
+</div>
+
+<script type="module">
+
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, query, orderBy } 
+from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyD0jDnVNHZAs83g6FGwQT_nOpOCyT4NTNU",
+  authDomain: "statistiky-6310a.firebaseapp.com",
+  projectId: "statistiky-6310a",
+  storageBucket: "statistiky-6310a.appspot.com",
+  messagingSenderId: "1023222901562",
+  appId: "1:1023222901562:web:522ee763e27aa08a8b7e03"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+window.db=db;
+window.addDoc=addDoc;
+window.collection=collection;
+window.getDocs=getDocs;
+window.deleteDoc=deleteDoc;
+window.doc=doc;
+window.query=query;
+window.orderBy=orderBy;
+
+window.addEventListener("load", loadMatches);
+
+</script>
+
+<script>
+
+let loadedLines=[];
+let activeRow=null;
+let allMatches=[];
+
+function applyFilter(){
+    const cat=document.getElementById("filterCategory").value;
+    renderMatches(cat);
+}
+
+function resetFilter(){
+    filterCategory.value="";
+    renderMatches();
+}
+
+document.getElementById("fileInput").addEventListener("change", e=>{
+    const reader=new FileReader();
+    reader.onload=ev=>{
+        loadedLines=ev.target.result.split(/\r?\n/)
+        .map(l=>l.trim()).filter(l=>l!=="");
+    };
+    reader.readAsText(e.target.files[0]);
+});
+
+async function saveMatch(){
+
+    if(!category.value || !homeTeam.value || !awayTeam.value){
+        alert("Vyber kategorii a oba týmy.");
+        return;
+    }
+
+    if(loadedLines.length<20){
+        alert("Nejprve nahraj zapas.txt");
+        return;
+    }
+
+    await addDoc(collection(db,"zapasy"),{
+        category:category.value,
+        homeTeam:homeTeam.value,
+        awayTeam:awayTeam.value,
+        stats:loadedLines,
+        created:Date.now()
+    });
+
+    loadMatches();
+}
+
+async function deleteMatch(id){
+
+    const password = prompt("Zadej heslo pro smazání zápasu:");
+
+    if(password !== "Lokomotiva"){
+        alert("Špatné heslo.");
+        return;
+    }
+
+    if(!confirm("Opravdu smazat zápas?")) return;
+
+    await deleteDoc(doc(db,"zapasy",id));
+    loadMatches();
+}
+
+async function loadMatches(){
+
+    allMatches=[];
+    const q=query(collection(db,"zapasy"),orderBy("created","desc"));
+    const snapshot=await getDocs(q);
+
+    snapshot.forEach(docSnap=>{
+        allMatches.push({id:docSnap.id,...docSnap.data()});
+    });
+
+    renderMatches();
+}
+
+function renderMatches(filterCategory=""){
+
+    const tbody=document.querySelector("#history tbody");
+    tbody.innerHTML="";
+
+    let first=true;
+
+    allMatches.forEach(m=>{
+
+        if(filterCategory && m.category!==filterCategory) return;
+
+        const awayGoals=
+            Number(m.stats[6])+Number(m.stats[7])+Number(m.stats[8]);
+
+        const homeGoals=
+            Number(m.stats[16])+Number(m.stats[17])+Number(m.stats[18]);
+
+        const tr=document.createElement("tr");
+
+        tr.innerHTML=`
+        <td>${new Date(m.created).toLocaleDateString()}</td>
+        <td>${m.category}</td>
+        <td>${m.awayTeam}</td>
+        <td>${m.homeTeam}</td>
+        <td>${awayGoals} : ${homeGoals}</td>
+        <td><button class="deleteBtn">Smazat</button></td>
+        `;
+
+        tr.onclick=()=>{
+            setActiveRow(tr);
+            showDetail(m.stats);
+        };
+
+        tr.querySelector(".deleteBtn").onclick=(e)=>{
+            e.stopPropagation();
+            deleteMatch(m.id);
+        };
+
+        tbody.appendChild(tr);
+
+        if(first){
+            setActiveRow(tr);
+            showDetail(m.stats);
+            first=false;
+        }
+    });
+}
+
+function setActiveRow(row){
+    if(activeRow) activeRow.classList.remove("activeMatch");
+    activeRow=row;
+    activeRow.classList.add("activeMatch");
+}
+
+function showDetail(stats){
+    for(let i=0;i<20;i++){
+        document.getElementById("ds"+i).innerText=stats[i];
+    }
+    document.getElementById("detailTable").style.display="table";
+}
+
+</script>
 
 </body>
 </html>
